<resources>
    <string name="app_name">SportsClubManagement</string>
    <string name="text_guest_screen">Ready to push\nyour limits?</string>
    <string name="loginText">LOGIN</string>
    <string name="registerText">REGISTER</string>
    <string name="sports_club">Sports Club</string>
    <string name="register">Register</string>
    <string name="first_last_name">First And Last Name</string>
    <string name="password">Password</string>
    <string name="input_placeholder">Input Placeholder</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">First And Last Name</string>
    <string name="existent_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_account_setup">AccountSetupActivity</string>
    <string name="welcome">WELCOME</string>
    <string name="login_to_your_naccount">Login To Your\nAccount</string>
    <string name="new_here">New here?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="home">Home</string>
    <string name="distance1">distance</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="calendar">Calendar</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="clubs">Clubs</string>
    <string name="events">Events</string>
    <string name="account_setup">Account Setup</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="continue1">continue</string>
    <string name="save_changes">Save changes</string>
    <string name="add_photo">Add photo</string>
    <string name="past_events">Past Events</string>
    <string name="joined_events">Joined Events</string>
    <string name="pending_events">Pending Events</string>
    <string name="running_club">Running Club</string>
    <string name="new_clubs">New Clubs</string>
    <string name="joined_clubs">Joined Clubs</string>
    <string name="pending_clubs">Pending Clubs</string>
    <string name="add_workouts">Add Workouts</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="av_speed">Av. Speed</string>
    <string name="duration">Duration</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="save">Save</string>
    <string name="placeholder">Placeholder</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="saved_changes">Saved Changes</string>
    <string name="owned_clubs">Owned Clubs</string>
    <string name="coach_name">Coach Name</string>
    <string name="coach">Coach</string>
    <string name="years_45">45 Years</string>
    <string name="members">Members</string>
    <string name="locations">Locations</string>
    <string name="time">time</string>
    <string name="calories1">calories</string>
    <string name="_157_bpm">157</string>
    <string name="bpm">BPM</string>
    <string name="_521_00">521.00</string>
    <string name="min">MIN</string>
    <string name="_32_22">32:22</string>
    <string name="km">KM</string>
    <string name="_8_66">8.66</string>
    <string name="_2020">2020</string>
    <string name="monday">Monday</string>
    <string name="may">May</string>
    <string name="_22">22</string>
    <string name="join_your_first_club">Join your first club</string>
    <string name="join_your_first_event">Join your first event</string>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="pending">Pending</string>
    <string name="years">Years</string>
    <string name="future_events">Future events</string>
    <string name="today_s_workout">Today\'s workout</string>
    <string name="workouts">Workouts</string>
    <string name="workouts_history">Workouts history</string>
    <string name="no_information">No information to show</string>
    <string-array name="spinnerPrimarySports">
        <item>Primary Sport</item>
        <item>Ceva 1</item>
        <item>Ceva 2</item>
        <item>Fotbal</item>
    </string-array>
    <string-array name="spinnerSecondarySports">
        <item>Secondary Sport</item>
        <item>Ceva 1</item>
        <item>Ceva 2</item>
        <item>Volei</item>
    </string-array>
    <string-array name="spinnerEvents">
        <item>Event</item>
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
    </string-array>
    <string-array name="spinnerWorkoutEfectiveness">
        <item>Workout Effectiveness</item>
        <item>Low</item>
        <item>Medium</item>
        <item>Intense</item>
    </string-array>
</resources>