<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/space_8dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/space_6dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_27dp"
            android:layout_marginTop="@dimen/space_20dp"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/_22"
            android:textSize="@dimen/text_70sp" />

        <TextView
            android:id="@+id/text_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_day"
            android:layout_toEndOf="@+id/text_day"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/may"
            android:textColor="@color/gull_gray"
            android:textSize="@dimen/text_16sp" />

        <TextView
            android:id="@+id/day_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/delimiter"
            android:layout_alignEnd="@id/text_year"
            android:layout_marginBottom="@dimen/space_8dp"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/monday"
            android:textColor="@color/gull_gray"
            android:textSize="@dimen/text_16sp" />

        <View
            android:id="@+id/delimiter"
            android:layout_width="@dimen/space_12dp"
            android:layout_height="@dimen/space_1dp"
            android:layout_above="@id/text_year"
            android:layout_alignEnd="@id/text_year"
            android:background="@color/colorGreen" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_day"
            android:layout_marginStart="@dimen/space_160dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_24dp"
            android:layout_toEndOf="@id/text_month"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/_2020"
            android:textColor="@color/gull_gray"
            android:textSize="@dimen/text_16sp" />

        <LinearLayout
            android:id="@+id/linear_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_month"
            android:layout_alignStart="@id/text_day"
            android:layout_marginTop="@dimen/space_61dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bicycle_icon"
                android:layout_width="@dimen/space_26dp"
                android:layout_height="@dimen/space_24dp"
                android:layout_gravity="center"
                android:src="@drawable/bicycle_icon" />

            <LinearLayout
                android:id="@+id/distance_2_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_11dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/distance_chain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/distance_travelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/_8_66"
                        android:textColor="@color/grayish_navy"
                        android:textSize="@dimen/text_26sp" />

                    <TextView
                        android:id="@+id/distance_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/km"
                        android:textColor="@color/grayish_navy"
                        android:textSize="@dimen/text_16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gull_gray"
                    android:text="@string/distance1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_year"
            android:layout_alignEnd="@id/text_year"
            android:layout_marginTop="@dimen/space_61dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="@dimen/space_26dp"
                android:layout_height="@dimen/space_24dp"
                android:layout_gravity="center"
                android:src="@drawable/clock_green_icon" />

            <LinearLayout
                android:id="@+id/time_2_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_11dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/time_chain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/time_passed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/_32_22"
                        android:textColor="@color/grayish_navy"
                        android:textSize="@dimen/text_26sp" />

                    <TextView
                        android:id="@+id/time_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/min"
                        android:textColor="@color/grayish_navy"
                        android:textSize="@dimen/text_16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gull_gray"
                    android:text="@string/time" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_distance"
            android:layout_alignStart="@id/text_day"
            android:layout_marginTop="@dimen/space_61dp"
            android:layout_marginBottom="@dimen/space_31dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calories_icon"
                android:layout_width="@dimen/space_26dp"
                android:layout_height="@dimen/space_24dp"
                android:layout_gravity="center"
                android:src="@drawable/kkal_icon" />

            <LinearLayout
                android:id="@+id/calories_2_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_11dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/calories_chain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/_521_00"
                        android:textColor="@color/grayish_navy"
                        android:textSize="@dimen/text_26sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/calories_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gull_gray"
                    android:text="@string/calories1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_time"
            android:layout_alignStart="@id/linear_time"
            android:layout_marginTop="@dimen/space_61dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bpm_icon"
                android:layout_width="@dimen/space_26dp"
                android:layout_height="@dimen/space_24dp"
                android:layout_gravity="center"
                android:src="@drawable/bpm_icon" />

            <LinearLayout
                android:id="@+id/bpm_2_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bpm_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/_157_bpm"
                    android:textColor="@color/grayish_navy"
                    android:textSize="@dimen/text_26sp" />

                <TextView
                    android:id="@+id/bpm_text"
                    android:textColor="@color/gull_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bpm" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
