<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.main.fragments.workouts.WorkoutsFragment">

        <TextView
            android:id="@+id/today_work_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_24dp"
            android:layout_marginTop="@dimen/space_24dp"
            android:fontFamily="@font/inter_normal"
            android:text="@string/today_s_workout"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTodayWorkout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_24dp"
            android:layout_marginTop="@dimen/space_13dp"
            android:paddingEnd="@dimen/space_30dp"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/today_work_text" />

        <TextView
            android:id="@+id/noInformationTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_information"
            android:layout_margin="@dimen/space_8dp"
            app:layout_constraintTop_toBottomOf="@id/today_work_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/workouts_history_text"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/workouts_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_24dp"
            android:layout_marginTop="@dimen/space_24dp"
            android:fontFamily="@font/inter_normal"
            android:text="@string/workouts_history"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerTodayWorkout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerWorkoutsHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_24dp"
            android:layout_marginTop="@dimen/space_13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workouts_history_text" />

        <TextView
            android:id="@+id/noInformationTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_information"
            android:layout_margin="@dimen/space_8dp"
            app:layout_constraintTop_toBottomOf="@id/workouts_history_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

        <Button
            android:id="@+id/addWorkout_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_log_guest"
            android:backgroundTint="@color/colorDarkGray"
            android:fontFamily="@font/inter_bold"
            android:text="@string/add_workouts"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerWorkoutsHistory"
            app:layout_constraintWidth_percent="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
